--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Celin</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Celin.UBE\Celin.UBE.csproj" />
+  </ItemGroup>
 
 </Project>
